# gaijin-ta

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  server.cert  server.key
.devcontainer/: Dockerfile  devcontainer.json
lib/: CMakeLists.txt
lib/msquic/: CMakeLists.txt
lib/yalantinglibs/: CMakeLists.txt
lib/yalantinglibs/struct_pack/: endian_wrapper.hpp  packer.hpp  user_helper.hpp
src/: main.cpp
src/app/: app.cppm  counter.cppm  local_data_source.cppm  protocol.cppm
src/io/: socket.cpp  socket.cppm
src/util/: util.cppm
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  api_test.cpp
